@@ -30,9 +30,9 @@
         ]
       }
     },
-    "campaign_id": "test string",
     "discovery_method": "Int - unknown",
     "incident_id": "test",
+    "related_incidents": "test string",
     "schema_version": "1.3",
     "security_incident": "Confirmed",
     "timeline": {
@@ -41,6 +41,6 @@
       }
     }
   },
-  "message": "Valid incident. Expect it to pass.",
-  "should": "pass"
+  "message": "related_incidents is no longer a valid field. changed to campaign_id. Test should fail.",
+  "should": "fail"
 }
